# lead-generation-

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  spec.md
alembic/: env.py
alembic/versions/: 52db5c201eaf_baseline_lead_dailyusage.py
backend/: botcheck.py  db.py  main.py  models.py  notify.py  schemas.py  spend.py
backend/agent/: core.py  guardrails.py  retrieval.py  tools.py
backend/knowledge/: faqs.md
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/components/: ChatWidget.tsx  LeadsDashboard.tsx
frontend/lib/: types.ts
