[project]
name = "lead-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "openai-agents[litellm,sqlalchemy]>=0.17.6",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]
